# OS_lab1

doc/: report.odt
include/: function.h
src/: CMakeLists.txt  child_2.c  function.c  main.c
